--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "magnium",
   "version": "1.0.0",
-  "description": "An ES6 based framework for building Titanium apps",
+  "description": "An ES6 based framework for building Titanium mobile apps",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
