--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "babel-cli": "6.26.0",
     "chalk": "2.3.1",
     "fs-extra": "5.0.0",
+    "lodash": "4.17.5",
     "shelljs": "0.8.1",
-    "xmldoc": "^1.1.0",
+    "xmldoc": "1.1.0",
     "xmldom": "0.1.27",
     "yargs": "11.0.0"
   }
