--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "magnium",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "An ES6 based framework for building Titanium mobile apps",
   "main": "./lib/magnium",
   "bin": {
     "ma": "./bin/magnium",
+    "mag": "./bin/magnium",
     "magnium": "./bin/magnium"
   },
   "keywords": [
@@ -32,9 +33,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-preset-env": "1.6.1",
     "chalk": "2.3.1",
     "fs-extra": "5.0.0",
+    "klaw-sync": "3.0.2",
     "shelljs": "0.8.1",
     "xmldom": "0.1.27",
     "yargs": "11.0.0"
