--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "magnium",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "An ES6 based framework for building Titanium mobile apps",
   "main": "./lib/magnium",
   "bin": {
@@ -39,7 +39,9 @@
     "chalk": "2.3.1",
     "fs-extra": "5.0.0",
     "klaw-sync": "3.0.2",
+    "lodash": "^4.17.10",
     "shelljs": "0.8.1",
+    "xmldoc": "^1.1.0",
     "xmldom": "0.1.27",
     "yargs": "11.0.0"
   }
